--- a/index.html
+++ b/index.html
@@ -12,6 +12,41 @@
         <title>nexter &mdash; your home, your freedom</title>
     </head>
     <body class="container">
+        <div class="sidebar">
+            Sidebar
+        </div>
+        <header class="header">
+            header
+        </header>
+
+        <div class="realtors">
+            Realtors
+        </div>
+
+        <section class="features">
+            Features
+        </section>
+
+        <div class="story__pictures">
+            Story Pictures
+        </div>
+
+        <div class="story__content">
+            Story Content
+        </div>
+
+
+        <section class="homes">
+            Homes
+        </section>
+
+        <section class="gallery">
+            Gallsery
+        </section>
+
+        <footer class="footer">
+            Footer
+        </footer>
         
     </body>
 </html>
