--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="sass/main.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         
         <title>nexter &mdash; your home, your freedom</title>
@@ -69,7 +69,13 @@
         </div>
 
         <div class="story__content">
-            Story Content
+            <h3 class="heading-3 mb-sm">Happy Customers</h3>
+            <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The best decision of our life&rdquo;</h2>
+            <p class="story__text mb-lg">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur voluptatibus. Quidem consequatur harum volupta!
+            </p>
+            <button class="btn">Find your own home</button>
+
         </div>
 
         <section class="homes">
